--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+ "name": "Restaurante O Pereira",
  "icons": [
   {
    "type": "image/png",
@@ -36,9 +37,8 @@
    "src": "misc/icon16.png"
   }
  ],
- "name": "Restaurante O Pereira",
- "background_color": "#FFFFFF",
  "display": "fullscreen",
- "theme_color": "#FFFFFF",
- "start_url": "index.htm?installed=true"
+ "background_color": "#000000",
+ "start_url": "index.htm?installed=true",
+ "theme_color": "#000000"
 }
