--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
  "name": "Restaurante O Pereira",
+ "theme_color": "#000000",
  "icons": [
   {
    "type": "image/png",
@@ -37,8 +38,7 @@
    "src": "misc/icon16.png"
   }
  ],
- "display": "fullscreen",
- "background_color": "#000000",
  "start_url": "index.htm?installed=true",
- "theme_color": "#000000"
+ "background_color": "#000000",
+ "display": "fullscreen"
 }
