--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,17 @@
 {
  "name": "Restaurante O Pereira",
- "theme_color": "#000000",
+ "start_url": "index.htm?installed=true",
+ "display": "fullscreen",
  "icons": [
   {
    "type": "image/png",
-   "sizes": "512x512",
-   "src": "misc/icon512.png"
+   "sizes": "150x150",
+   "src": "misc/icon150.png"
   },
   {
    "type": "image/png",
-   "sizes": "192x192",
-   "src": "misc/icon192.png"
+   "sizes": "16x16",
+   "src": "misc/icon16.png"
   },
   {
    "type": "image/png",
@@ -19,13 +20,8 @@
   },
   {
    "type": "image/png",
-   "sizes": "150x150",
-   "src": "misc/icon150.png"
-  },
-  {
-   "type": "image/png",
-   "sizes": "64x64",
-   "src": "misc/icon64.png"
+   "sizes": "192x192",
+   "src": "misc/icon192.png"
   },
   {
    "type": "image/png",
@@ -34,11 +30,15 @@
   },
   {
    "type": "image/png",
-   "sizes": "16x16",
-   "src": "misc/icon16.png"
+   "sizes": "512x512",
+   "src": "misc/icon512.png"
+  },
+  {
+   "type": "image/png",
+   "sizes": "64x64",
+   "src": "misc/icon64.png"
   }
  ],
- "start_url": "index.htm?installed=true",
  "background_color": "#000000",
- "display": "fullscreen"
+ "theme_color": "#000000"
 }
